// SPDX-FileCopyrightText: 2022-2023 Shun Sakai
//
// SPDX-License-Identifier: Apache-2.0 OR MIT

= Changelog
:toc: macro
:project-url: https://github.com/sorairolake/scryptenc-rs
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

toc::[]

== {compare-url}/v0.6.0\...v0.7.0[0.7.0] - 2023-08-11

=== Changed

* Split `Params` from `format.rs` ({pull-request-url}/38[#38])
* Use `StdRng` instead of `ChaCha20Rng` to generate salt
  ({pull-request-url}/38[#38])
* Rename `Error::InvalidHeaderSignature` to `Error::InvalidHeaderMac`
  ({pull-request-url}/40[#40])
* Rename `Error::InvalidSignature` to `Error::InvalidMac`
  ({pull-request-url}/40[#40])

== {compare-url}/v0.5.3\...v0.6.0[0.6.0] - 2023-08-09

=== Added

* Add doctests to public API ({pull-request-url}/34[#34])
* Implement `Clone`, `Copy`, `Eq` and `PartialEq` for `Error`
  ({pull-request-url}/35[#35])

=== Fixed

* Fix `benches/encrypt.rs` ({pull-request-url}/30[#30])

== {compare-url}/v0.5.2\...v0.5.3[0.5.3] - 2023-08-06

=== Changed

* Update documentation ({pull-request-url}/26[#26])

== {compare-url}/v0.5.1\...v0.5.2[0.5.2] - 2023-08-01

=== Changed

* Change the comment header to the format recommended by the REUSE
  Specification ({pull-request-url}/23[#23])
* Make this project REUSE compliant ({pull-request-url}/24[#24])

== {compare-url}/v0.5.0\...v0.5.1[0.5.1] - 2023-07-04

=== Changed

* Enable `doc_auto_cfg` feature

== {compare-url}/v0.4.1\...v0.5.0[0.5.0] - 2023-03-12

=== Added

* Add `Error::InvalidHeaderSignature`

=== Changed

* Bump `scrypt` to v0.11
* Bump MSRV to 1.60.0
* Change to return `Error::InvalidHeaderSignature` if the header signature was
  invalid

== {compare-url}/v0.4.0\...v0.4.1[0.4.1] - 2022-11-09

=== Changed
