@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: 2022-2023 Shun Sakai
+# SPDX-FileCopyrightText: 2023 Shun Sakai
 #
 # SPDX-License-Identifier: Apache-2.0 OR MIT
 
