@@ -1,5 +1,5 @@
 <!--
-SPDX-FileCopyrightText: 2022-2023 Shun Sakai
+SPDX-FileCopyrightText: 2022 Shun Sakai
 
 SPDX-License-Identifier: Apache-2.0 OR MIT
 -->
