@@ -1,4 +1,4 @@
-// SPDX-FileCopyrightText: 2022-2023 Shun Sakai
+// SPDX-FileCopyrightText: 2022 Shun Sakai
 //
 // SPDX-License-Identifier: Apache-2.0 OR MIT
 
@@ -15,6 +15,13 @@ The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
 toc::[]
+
+== {compare-url}/v0.7.0\...HEAD[Unreleased]
+
+=== Changed
+
+* Change `SPDX-FileCopyrightText` of each file to include only the year of
+  initial publication ({pull-request-url}/45[#45])
 
 == {compare-url}/v0.6.0\...v0.7.0[0.7.0] - 2023-08-11
 
